<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.fragments_SignIn.CreateProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_constraintLayoutCreateProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_brown">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="500dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49"
            tools:ignore="TextSizeCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray">

                <TextView
                    android:id="@+id/id_textViewCreateYourProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/createProfile"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.506"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="2dp"
                    app:cardBackgroundColor="@null"
                    app:cardCornerRadius="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/id_textViewCreateYourProfile">


                    <ImageButton
                        android:id="@+id/id_btnSelectAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/light_grey"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/addprofile" />

                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/id_profileName"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="96dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/profileName"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/id_btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_button"

                    android:backgroundTint="@color/light_brown"
                    android:text="@string/next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/id_profileName"
                    app:layout_constraintVertical_bias="0.329"
                    tools:ignore="TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>