<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_fragmentFrameForgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".fragments.fragments_SignIn.ForgotPassword" >

    <androidx.cardview.widget.CardView
        android:id="@+id/id_cardViewFragmentSend"
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="15dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray">

            <TextView
                android:id="@+id/id_fragmentSend1"
                android:layout_width="185dp"
                android:layout_height="51dp"
                android:layout_marginTop="44dp"
                android:fontFamily="sans-serif"
                android:text="@string/fragment_send_text_1"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/id_fragmentSend2"
                android:layout_width="213dp"
                android:layout_height="82dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/fragment_send_text_2"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/id_fragmentSend1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/id_fragmentSend1"
                app:layout_constraintTop_toBottomOf="@+id/id_fragmentSend1"
                tools:ignore="TextSizeCheck" />

            <LinearLayout
                android:id="@+id/id_layoutSendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.465"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_FragmentEmail"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/send"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/id_fragmentSentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/id_imgBtnReturnOnSignFragment"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="196dp"
                android:background="#252525"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="@+id/id_fragmentSend1"
                app:layout_constraintStart_toStartOf="@+id/id_fragmentSend1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/id_FragmentEmail"
                android:layout_width="239dp"
                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/login_hint"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/id_fragmentSend2"
                app:layout_constraintTop_toBottomOf="@+id/id_fragmentSend2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>